[project]
name = "testtravelwebsiteproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Rose Lan",email = "lantsros@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
selenium =  "4.29.0"
pytest = "7.4.0"
junit-xml = "1.9"
pytest-html = "3.2.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
